--- a/app1/app1/src/main/resources/application.properties
+++ b/app1/app1/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 server.port=9191
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.h2.console.enabled=true
+#spring.jpa.show-sql=true
+#debug=true
+spring.dataSource.url = jdbc:mysql://localhost:3306/Emp?useSSL=false&serverTimezone=UTC&useLegecyDatetimeCode=false
+spring.dataSource.username = root
+spring.dataSource.password = akash
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto = none
+
